# aws-sdk-rust

./: Cargo.toml  README.md  config.json  index.md  versions.toml
.github/workflows/: canary.yaml
examples/webassembly/: Cargo.toml
examples/webassembly/src/: lib.rs
sdk/accessanalyzer/: Cargo.toml  README.md
sdk/account/: Cargo.toml  README.md
sdk/acm/: Cargo.toml  README.md
sdk/acmpca/: Cargo.toml  README.md
sdk/aiops/: Cargo.toml  README.md
sdk/amp/: Cargo.toml  README.md
sdk/amplify/: Cargo.toml  README.md
sdk/amplifybackend/: Cargo.toml  README.md
sdk/amplifyuibuilder/: Cargo.toml  README.md
sdk/apigateway/: Cargo.toml  README.md
sdk/apigatewaymanagement/: Cargo.toml  README.md
sdk/apigatewayv2/: Cargo.toml  README.md
sdk/appconfig/: Cargo.toml  README.md
sdk/appconfigdata/: Cargo.toml  README.md
sdk/appfabric/: Cargo.toml  README.md
sdk/appflow/: Cargo.toml  README.md
sdk/appintegrations/: Cargo.toml  README.md
sdk/applicationautoscaling/: Cargo.toml  README.md
sdk/applicationcostprofiler/: Cargo.toml  README.md
sdk/applicationdiscovery/: Cargo.toml  README.md
sdk/applicationinsights/: Cargo.toml  README.md
sdk/applicationsignals/: Cargo.toml  README.md
sdk/appmesh/: Cargo.toml  README.md
sdk/apprunner/: Cargo.toml  README.md
sdk/appstream/: Cargo.toml  README.md
sdk/appsync/: Cargo.toml  README.md
sdk/arcregionswitch/: Cargo.toml  README.md
sdk/arczonalshift/: Cargo.toml  README.md
sdk/artifact/: Cargo.toml  README.md
sdk/athena/: Cargo.toml  README.md
sdk/auditmanager/: Cargo.toml  README.md
(+60200 files in other folders)
