[package]
name = "webassembly"
version = "0.1.0"
authors = ["Eduardo Rodrigues <16357187+eduardomourar@users.noreply.github.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.aws-config]
path = "../../sdk/aws-config"
version = "0.53.0"
default-features = false

[dependencies.aws-sdk-s3]
path = "../../sdk/s3"
version = "0.23.0"
default-features = false

[dependencies.aws-smithy-client]
path = "../../sdk/aws-smithy-client"
version = "0.53.0"
default-features = false

[dependencies.aws-smithy-http]
path = "../../sdk/aws-smithy-http"
version = "0.53.0"

[dependencies.aws-smithy-types]
path = "../../sdk/aws-smithy-types"
version = "0.53.0"

[dependencies.http]
version = "0.2.8"

[dependencies.tokio]
version = "1.24.2"
features = ["macros", "rt"]

[dependencies.tower]
version = "0.4.13"

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]
